# HelloWorldProj

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: release.yaml
Inc/: gen_hello.h
Src/: CMakeLists.txt  gen_hello.cpp  main.cpp
Test/: CMakeLists.txt  test_hello.cpp
